configure maven gwt plugin for gwt:run gwt:debug